--- a/src/app/components/herosection/herosection.component.html
+++ b/src/app/components/herosection/herosection.component.html
@@ -1,5 +1,5 @@
 <section class="hero">
   <h1>Welcome to Our Application</h1>
-  <p>Your tagline or introduction goes here.</p>
+  <p>Ticket management.</p>
   <a href="/login" class="cta-button">Get Started</a>
 </section>
