add: login component finished issue: get tickets view store token

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,19 @@
 <div class="login-container">
   <h2>Login</h2>
-  <form>
-    <label for="username">Username</label>
-    <input id="username" type="text" name="username" required />
+  <form (ngSubmit)="onSubmit()">
+    <label for="email">Email</label>
+    <input id="email" type="email" [(ngModel)]="email" name="email" required />
 
     <label for="password">Password</label>
-    <input id="password" type="password" name="password" required />
-
+    <input
+      id="password"
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      required
+    />
     <button type="submit">Login</button>
+
+    <div *ngIf="error" class="error-message">{{ error }}</div>
   </form>
 </div>
