--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -28,3 +28,9 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+
+.error-message {
+  color: red;
+  text-align: center;
+  padding: 2px;
+}
