--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,11 +1,23 @@
 <div class="login-container">
   <h2>Sign Up</h2>
-  <form>
-    <label for="username">Username</label>
-    <input id="username" type="text" name="username" required />
+  <form (ngSubmit)="onSubmit()">
+    <label for="name">Name</label>
+    <input id="name" type="text" [(ngModel)]="name" name="name" required />
+
+    <label for="email">Email</label>
+    <input id="email" type="email" [(ngModel)]="email" name="email" required />
 
     <label for="password">Password</label>
-    <input id="password" type="password" name="password" required />
+    <input
+      id="password"
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      required
+    />
+
+    <label for="role">Role</label>
+    <input id="role" type="text" [(ngModel)]="role" name="role" required />
 
     <button type="submit">Sign Up</button>
   </form>
