add: get tickets ui issue: initial loading

--- a/src/app/components/herosection/herosection.component.html
+++ b/src/app/components/herosection/herosection.component.html
@@ -1,5 +1,5 @@
 <section class="hero">
   <h1>Welcome to Our Application</h1>
   <p>Ticket management.</p>
-  <a href="/login" class="cta-button">Get Started</a>
+  <a href="/tickets" class="cta-button">Get Started</a>
 </section>
