--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,2 +1,21 @@
-<p>tickets works!</p>
-{{ tickets }}
+<div *ngIf="isLoading">
+  <p>Loading tickets...</p>
+</div>
+
+<div *ngIf="!isLoading && tickets.length; else noTickets">
+  <ul>
+    <li *ngFor="let ticket of tickets">
+      <h3>{{ ticket.title }}</h3>
+      <p>{{ ticket.description }}</p>
+      <p>Status: {{ ticket.status }}</p>
+    </li>
+  </ul>
+</div>
+
+<ng-template #noTickets>
+  <p>No tickets available.</p>
+</ng-template>
+
+<div *ngIf="error" class="error">
+  <p>{{ error }}</p>
+</div>
