--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -5,9 +5,11 @@
 <div *ngIf="!isLoading && tickets.length; else noTickets">
   <ul>
     <li *ngFor="let ticket of tickets">
-      <h3>{{ ticket.title }}</h3>
-      <p>{{ ticket.description }}</p>
-      <p>Status: {{ ticket.status }}</p>
+      <a [routerLink]="['/selected-ticket', ticket._id]">
+        <h3>{{ ticket.title }}</h3>
+        <p>{{ ticket.description }}</p>
+        <p>Status: {{ ticket.status }}</p>
+      </a>
     </li>
   </ul>
 </div>
