add: edit ticket

--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -20,7 +20,7 @@
           <div class="flex justify-end">
             <button
               type="button"
-              [routerLink]="'/edit-ticket'"
+              [routerLink]="['/edit-ticket', ticket._id]"
               class="cta-button"
             >
               Edit
