--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="isLoading">
-  <p>Loading tickets...</p>
-</div>
-
 <div *ngIf="!isLoading && tickets.length; else noTickets">
   <div class="margin-2">
     <div class="flex justify-end">
@@ -18,19 +14,12 @@
             <p>Status: {{ ticket.status }}</p>
           </div>
           <div class="flex justify-end">
-            <button
-              type="button"
-              [routerLink]="['/edit-ticket', ticket._id]"
-              class="cta-button"
-            >
-              Edit
-            </button>
-
-            <button
-              type="button"
-              [routerLink]="['/selected-ticket', ticket._id]"
-              class="cta-button"
-            >
+            <div *ngIf="isAdminOrSupport">
+              <button type="button" [routerLink]="['/edit-ticket', ticket._id]" class="cta-button">
+                Edit
+              </button>
+            </div>
+            <button type="button" [routerLink]="['/selected-ticket', ticket._id]" class="cta-button">
               More
             </button>
           </div>
@@ -41,9 +30,7 @@
 </div>
 
 <ng-template #noTickets>
-  <p>No tickets available.</p>
+  <section>
+    No ticket available
+  </section>
 </ng-template>
-
-<div *ngIf="error" class="error">
-  <p>{{ error }}</p>
-</div>
