--- a/src/app/components/tickets/selected-tickets/selected-tickets.component.html
+++ b/src/app/components/tickets/selected-tickets/selected-tickets.component.html
@@ -3,6 +3,9 @@
   <p>{{ ticket.description }}</p>
   <p>Status: {{ ticket.status }}</p>
 
+  <div *ngIf="successMessage" class="response">
+    {{ successMessage }}
+  </div>
 </div>
 
 <div *ngIf="!ticket">
