add: logout function handled by AuthService

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav>
   <ul>
-    <li><a href="/">Home </a></li>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/signup">Signup</a></li>
+    <li><a href="/">Home</a></li>
+    <li *ngIf="!isLoggedIn"><a href="/login">Login</a></li>
+    <li *ngIf="!isLoggedIn"><a href="/signup">Signup</a></li>
+    <li *ngIf="isLoggedIn">
+      <button (click)="logout()">Logout</button>
+    </li>
   </ul>
 </nav>
